force-app/main/default/objects/cogn__Error_Log__c/fields/cogn__Cognism_Campaign__c.field-meta.xml
<CustomField>
    <fullName>cogn__Cognism_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cognism Campaign</label>
    <referenceTo>cogn__Cognism_Campaign__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>