force-app/main/default/objects/cogn__Error_Log__c/fields/cogn__Description__c.field-meta.xml
<CustomField>
    <fullName>cogn__Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>