force-app/main/default/objects/cogn__Error_Log__c/fields/cogn__Job_Name__c.field-meta.xml
<CustomField>
    <fullName>cogn__Job_Name__c</fullName>
    <label>Job Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>