force-app/main/default/objects/cogn__Error_Log__c/fields/cogn__Refresh_Stats__c.field-meta.xml
<CustomField>
    <fullName>cogn__Refresh_Stats__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refresh Stats</label>
    <referenceTo>cogn__Clean_Job__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>